--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap");
+* {
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+  font-family: "Poppins";
+}
+
 /* Globale Stile */
 body {
   font-family: "Arial", sans-serif;
@@ -14,17 +21,21 @@ header {
   padding: 15px 0;
   text-align: center;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
+  border-bottom-left-radius: 80% 20px;
+  border-bottom-right-radius: 80% 20px;
 }
 
 nav {
   display: flex;
   justify-content: space-evenly;
+  margin: 0 10px;
+  margin-top: -2vh;
   align-items: center;
 }
 
 nav a {
   color: white;
-  margin: 0 10px;
   text-decoration: none;
   font-weight: bold;
   font-size: 14px;
@@ -39,6 +50,42 @@ main {
   padding: 20px;
   max-width: 1200px;
   margin: auto;
+}
+
+#exercise-list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px; /* Abstand zwischen den Einträgen */
+}
+
+.date-header {
+  font-size: 1.5em;
+  font-weight: bold;
+  margin: 10px 0;
+  color: #333;
+}
+
+.date-divider {
+  border: 0;
+  border-top: 2px solid #ddd;
+  margin: 10px 0;
+}
+
+.exercise-entry {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 10px;
+  background-color: #f9f9f9;
+}
+
+.exercise-detail {
+  margin-bottom: 5px;
+}
+
+.exercise-detail button {
+  align-self: flex-start; /* Button am Anfang ausrichten */
 }
 
 /* Formulare */
