--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,10 @@
       type="text/css"
       href="{{ url_for('static', filename='style.css') }}"
     />
+    <link
+      href="https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
@@ -17,6 +21,7 @@
       <header>
         <nav>
           <a href="{{ url_for('food') }}">Food</a>
+
           <a href="{{ url_for('exercise_entries') }}">Exercises</a>
           <a href="{{ url_for('goals') }}">Goals</a>
         </nav>
