--- a/static/style.css
+++ b/static/style.css
@@ -307,10 +307,8 @@ table tr:nth-child(even) {
   margin: 5px 0;
 }
 
-.delete-food {
-  position: absolute;
-  top: 10px;
-  right: 10px;
+.delete-food,
+.delete-exercise {
   padding: 5px 10px;
   border: none;
   border-radius: 5px;
@@ -318,10 +316,49 @@ table tr:nth-child(even) {
   color: white;
   cursor: pointer;
   font-size: 14px;
+  position: relative;
+  right: -80%;
 }
 
 .delete-food:hover {
   background-color: #c82333;
+}
+
+.get-started {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  text-align: start;
+}
+
+.advantage {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  text-align: center;
+}
+
+.image-advantag {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  flex-direction: column;
+}
+
+@keyframes slideInUp {
+  0% {
+    transform: translateY(100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+.slide-in {
+  animation: slideInUp 0.6s ease-out forwards;
 }
 
 /* Responsive Design */
