--- a/templates/exercise_entries.html
+++ b/templates/exercise_entries.html
@@ -20,7 +20,7 @@
   <label for="kg">Weight (kg):</label>
   <input type="number" id="kg" name="kg" step="0.1" required /><br />
 
-  <input type="submit" value="Add" />
+  <input type="submit" value="+" />
 </form>
 
 <h2>Exercises</h2>
