--- a/templates/food.html
+++ b/templates/food.html
@@ -2,7 +2,7 @@
 
 <div class="search-container">
   <input type="text" id="search-input" placeholder="Food..." />
-  <button id="search-button">Add</button>
+  <button id="search-button">+</button>
 </div>
 
 <div id="suggestions" class="suggestions-container">
