--- a/static/style.css
+++ b/static/style.css
@@ -490,3 +490,28 @@ table tr:nth-child(even) {
 .additional-button:hover {
   background-color: #c8102e;
 }
+
+.health-bar-container {
+  margin-top: 20px;
+}
+
+.health-bar {
+  width: 100%;
+  height: 30px;
+  background-color: #e0e0e0;
+  border-radius: 5px;
+  position: relative;
+  overflow: hidden;
+}
+
+.progress {
+  height: 100%;
+  background-color: #76c7c0;
+  width: 0%; /* Anfangswert, wird per JavaScript geändert */
+  transition: width 0.5s ease;
+}
+
+.percentage {
+  text-align: right;
+  margin-top: 5px;
+}
