--- a/templates/goals.html
+++ b/templates/goals.html
@@ -65,11 +65,9 @@
     <p>No goals set</p>
     {% endif %}
   </div>
-
+  <br />
   <!-- Additional Button -->
-  <button id="additional-button" class="additional-button">
-    Show Health Bar
-  </button>
+  <button id="additional-button" class="additional-button">Show kcal</button>
 
   <!-- Health Bar Container (initial hidden) -->
   <div
@@ -77,7 +75,7 @@
     class="health-bar-container"
     style="display: none"
   >
-    <label for="health-bar">Daily Caloric Goal:</label>
+    <label for="health-bar">Daily kcal Goal:</label>
     <div id="health-bar" class="health-bar">
       <div id="progress" class="progress"></div>
     </div>
