--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
           <a href="{{ url_for('food') }}">Food</a>
 
           <a href="{{ url_for('exercise_entries') }}">Excercise</a>
-          <a href="{{ url_for('goals') }}">Goals</a>
+          <a href="{{ url_for('goals') }}">More</a>
         </nav>
       </header>
     </header>
