--- a/static/style.css
+++ b/static/style.css
@@ -109,12 +109,14 @@ header {
   justify-content: space-evenly;
   align-items: center;
   gap: 5vw;
+  justify-content: center;
 }
 
 nav {
   display: flex;
   justify-content: space-evenly;
   margin: 0 10px;
+  padding-right: 10vw;
   margin-top: -2vh;
   align-items: center;
 }
