--- a/static/style.css
+++ b/static/style.css
@@ -8,8 +8,8 @@
 
 /* Globale Stile */
 body {
-  background-color: #f4f4f4;
-  color: #333;
+  background-color: #252733;
+  color: #000;
   margin: 0;
   padding: 0;
 }
@@ -19,6 +19,8 @@ input[type="number"],
 input[type="password"],
 textarea {
   font-size: 16px;
+  background-color: #28344c;
+  border: none;
 }
 
 label,
@@ -34,20 +36,23 @@ textarea {
   box-sizing: border-box;
   padding: 10px;
   margin-top: 5px;
+  color: white;
 }
 
 form {
   max-width: 600px;
   margin: 0 auto;
   padding: 20px;
-  background: white;
+  background: #373a4b;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  color: white;
 }
 
 form label {
   display: block;
   margin: 10px 0 5px;
+  color: white;
 }
 
 form input[type="text"],
@@ -77,7 +82,7 @@ form input[type="submit"]:hover {
 button {
   margin-top: 10px;
   padding: 10px 20px;
-  background-color: #4caf50;
+  background-color: #4169e1;
   color: white;
   border: none;
   border-radius: 4px;
@@ -85,15 +90,14 @@ button {
 }
 
 button:hover {
-  background-color: #45a049;
+  background-color: #4169e1a3;
 }
 
 header {
   background-color: #4169e1;
   color: white;
-  padding: 15px 0;
   text-align: center;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 12px 0;
   border-bottom-left-radius: 80% 20px;
   border-bottom-right-radius: 80% 20px;
 }
@@ -379,6 +383,7 @@ table tr:nth-child(even) {
 
 .image-rev-advan {
   border-radius: 20px;
+  color: white;
 }
 
 @keyframes slideInUp {
