--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
 <div class="reverse-advantages">
   <img class="image-rev-advan slide-in" src="https://i.ibb.co/gd1mwmv/ss.png" />
   <div class="text-rev-advan">
-    <p class="slide-in">
+    <p class="slide-in" style="color: white">
       Track your training <br />
       to achieve your goals faster
     </p>
