--- a/templates/food.html
+++ b/templates/food.html
@@ -1,31 +1,49 @@
 {% extends "base.html" %} {% block content %}
 
-<div class="search-container">
+<!--<div class="search-container">
   <input type="text" id="search-input" placeholder="Food..." />
   <button id="search-button">+</button>
 </div>
 
-<div id="suggestions" class="suggestions-container">
-  <!-- Autovervollständigungsvorschläge werden hier angezeigt -->
+<div id="suggestions" class="suggestions-container">-->
+  <!-- Autovervollständigungsvorschläge werden hier angezeigt 
 </div>
 <br />
 <br />
-<br />
-<form method="post">
-  <label for="name">Name:</label>
-  <input type="text" id="name" name="name" required /><br />
-  <label for="calories">Calories:</label>
-  <input type="number" id="calories" name="calories" required /><br />
-  <label for="carbs">Carbs:</label>
-  <input type="number" id="carbs" name="carbs" required /><br />
-  <label for="protein">Protein:</label>
-  <input type="number" id="protein" name="protein" required /><br />
-  <label for="fat">Fat:</label>
-  <input type="number" id="fat" name="fat" required /><br />
-  <input type="submit" value="Add" />
-</form>
+<br />-->
+  <!-- Health Bar Container (initial hidden) -->
+  <div class="health-bar-container" id="health-bar-container">
+    <div id="health-bar" class="health-bar">
+      <div id="progress" class="progress"></div>
+    </div>
+    <div class="percentage" style="color: white;">
+      <span id="calories-consumed" style="color: white;">0 kcal</span> 
+      <span id="calories-goal" style="color: white;"></span>
+    </div>
+  </div>
+  <div class="input-section">
+    <input type="number" id="calorie-input" placeholder="Enter calories" />
+    <button id="add-calories-btn">Add Calories</button>
+  </div>
+  <div class="calorie-calculator">
+    <h2 style="color: white;">Kcal Calculator</h2>
+    <input type="number" id="age" placeholder="Age" />
+    <input type="number" id="weight" placeholder="Weight (kg)" />
+    <input type="number" id="height" placeholder="Height (cm)" />
+    <br /><br />
+    <select style="background-color: #28344c; border: none; color: rgba(255, 255, 255, 0.562); " id="activity-level">
+      <option value="1.2">Sedentary</option>
+      <option value="1.375">Lightly active</option>
+      <option value="1.55">Moderately active</option>
+      <option value="1.725">Very active</option>
+      <option value="1.9">Super active</option>
+    </select>
+    <br />
+    <button id="calculate-btn">Calculate</button>
+  </div>
+</div>
 
-<h2>Food</h2>
+
 <ul id="food-list">
   {% for food in foods %}
   <li data-id="{{ food[0] }}">
@@ -39,10 +57,6 @@
   {% endfor %}
 </ul>
 
-<div id="results" class="results-container">
-  <!-- Der Delete-Button wird hier dynamisch eingefügt -->
-  <!-- Ergebnisse werden hier angezeigt -->
-</div>
 
 <script src="{{ url_for('static', filename='scripts.js') }}"></script>
 {% endblock %}
