--- a/static/style.css
+++ b/static/style.css
@@ -39,6 +39,24 @@ textarea {
   color: white;
 }
 
+#hide-button {
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  cursor: pointer;
+  border-radius: 4px; /* Stellt sicher, dass der Button gut sichtbar ist */
+}
+
+#hide-button:hover {
+  background-color: #0056b3;
+}
+
+#container {
+  display: block; /* Sicherstellen, dass der Container anfänglich sichtbar ist */
+  /* Andere relevante Stile für den Container */
+}
+
 form {
   max-width: 600px;
   margin: 0 auto;
@@ -164,8 +182,8 @@ main {
   background-color: #f9f9f9;
 }
 
-.exercise-detail {
-  margin-bottom: 5px;
+.exercise-detail button {
+  align-self: flex-start; /* Stellt sicher, dass der Button korrekt positioniert ist */
 }
 
 .exercise-detail button {
