--- a/templates/exercise_entries.html
+++ b/templates/exercise_entries.html
@@ -22,7 +22,6 @@
 
   <input type="submit" value="+" />
 </form>
-
 <h2 style="color: white;">Exercises</h2>
 <div style="color: black;" id="exercise-list">
   {% set current_date = '' %}
@@ -32,7 +31,15 @@
         </div> <!-- End of previous day's group -->
         <hr class="date-divider">
       {% endif %}
-      <div style="color: white;" class="date-header">{{ entry['date'] }}</div>
+
+        <div style="color: white;" id="date-{{ entry['id'] }}" class="date-header">{{ entry['date'] }}</div>
+        <script>
+            document.querySelectorAll('.date-header').forEach(function (dateHeader) {
+                if (!dateHeader.innerText === {{ entry['date'] }}) {
+                    document.getElementById("date-{{ entry['id'] }}").style.display = "none";
+                }
+              });
+        </script>
       <div class="exercise-group"> <!-- Start new day's group -->
       {% set current_date = entry['date'] %}
     {% endif %}
@@ -53,7 +60,7 @@
         <button class="delete-exercise" data-id="{{ entry['id'] }}">Delete</button>
       </div>
     </div>
-  {% endfor %}
+{% endfor %}
   {% if current_date != '' %}
     </div> <!-- End of the last day's group -->
   {% endif %}
