--- a/templates/food.html
+++ b/templates/food.html
@@ -9,7 +9,7 @@
       <div id="progress" class="progress"></div>
     </div>
     <div class="percentage" style="color: white;">
-      <span id="calories-consumed" style="color: white;">0 kcal</span> 
+      <span id="calories-consumed" style="color: white;">0 kcal</span> / 
       <span id="calories-goal" style="color: white;"></span>
     </div>
   </div>
