--- a/static/style.css
+++ b/static/style.css
@@ -179,7 +179,8 @@ main {
   border: 1px solid #ccc;
   border-radius: 5px;
   padding: 10px;
-  background-color: #f9f9f9;
+  background-color: #28344c;
+  color: white;
 }
 
 .exercise-detail button {
@@ -463,7 +464,7 @@ table tr:nth-child(even) {
 }
 
 .toggle-button {
-  background-color: #315195;
+  background-color: #27408b;
   color: #ffffff;
   border: none;
   padding: 10px 20px;
@@ -474,12 +475,76 @@ table tr:nth-child(even) {
 }
 
 .toggle-button:hover {
-  background-color: #27408b;
+  background-color: transparent;
 }
 
+.goals-container {
+  max-width: 600px;
+  margin: 20px auto;
+  background-color: #333;
+  border-radius: 8px;
+  overflow: hidden;
+}
+.toggle-button {
+  background-color: #333;
+  color: white;
+  padding: 10px;
+  width: 100%;
+  border: none;
+  cursor: pointer;
+  text-align: left;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  height: 5vh;
+}
+.toggle-button i {
+  float: right;
+  background-color: transparent;
+}
 .goals-content {
+  padding: 10px;
+  background-color: #333;
   display: none;
-  margin-top: 20px;
+}
+.note-input-container {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 10px;
+}
+#note-input {
+  flex: 1;
+  padding: 10px;
+  border-radius: 4px;
+  border: 1px solid #333;
+  height: 5vh;
+  width: 100%;
+  margin-top: 1.2vh;
+}
+#add-note {
+  padding: 10px 20px;
+  border: none;
+  background-color: #315195;
+  color: white;
+  border-radius: 4px;
+  cursor: pointer;
+  width: 5vw;
+}
+.note {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #28344c;
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  color: white;
+}
+.note p {
+  margin: 0;
+  flex: 1;
 }
 
 .additional-button {
