--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
   <h2>Click To Get Started</h2>
   <i
     class="bx bxs-up-arrow-alt bx-flip-horizontal bx-tada"
-    style="color: #315195; font-size: 10vh"
+    style="color: #3874f5; font-size: 10vh"
   ></i>
 </div>
 <br /><br />
@@ -12,20 +12,14 @@
     <i class="bx bxs-heart bx-burst" style="color: #d01619; font-size: 6vh"></i>
     <p>Daily kcal</p>
   </div>
-  <img
-    src="https://i.ibb.co/TMSJ30p/ff.png"
-    style="border-radius: 20px"
-    class="slide-in"
-  />
 </div>
 <br />
 <br />
 <div class="reverse-advantages">
-  <img class="image-rev-advan slide-in" src="https://i.ibb.co/gd1mwmv/ss.png" />
   <div class="text-rev-advan">
     <p class="slide-in" style="color: white">
       Track your training <br />
-      to achieve your goals faster
+      and achieve your goals faster
     </p>
   </div>
 </div>
