--- a/static/style.css
+++ b/static/style.css
@@ -390,19 +390,15 @@ table tr:nth-child(even) {
   justify-content: space-evenly;
   align-items: center;
   text-align: center;
-  background-color: #dddddd;
+  background-color: none;
   padding: 10px;
   border-radius: 20px;
+  color: white;
 }
 
 .image-advantag {
   flex-direction: column;
   border-radius: 20px;
-}
-
-.image-rev-advan {
-  border-radius: 20px;
-  color: white;
 }
 
 @keyframes slideInUp {
