--- a/templates/exercise_entries.html
+++ b/templates/exercise_entries.html
@@ -22,7 +22,7 @@
 
   <input type="submit" value="+" />
 </form>
-<h2 style="color: white;">Exercises</h2>
+<h2 style="color: white;">Exercises:</h2>
 <div style="color: black;" id="exercise-list">
   {% set current_date = '' %}
   {% for entry in entries %}
