--- a/static/style.css
+++ b/static/style.css
@@ -582,3 +582,39 @@ table tr:nth-child(even) {
   text-align: right;
   margin-top: 5px;
 }
+
+.blog-container {
+  margin-top: -10px;
+}
+
+.blog-content {
+  display: none;
+}
+
+.blog-item-content {
+  animation: fadeIn 0.3s ease-in-out;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.content-section {
+  padding: 15px;
+  background-color: #f0f0f0;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  color: #333;
+  margin-bottom: 15px;
+}
+
+.content-section h3 {
+  margin-top: 0;
+}
