--- a/static/style.css
+++ b/static/style.css
@@ -618,3 +618,33 @@ table tr:nth-child(even) {
 .content-section h3 {
   margin-top: 0;
 }
+
+.collapsible {
+  background-color: transparent;
+  cursor: pointer;
+  width: 100%;
+  padding: 10px;
+  position: relative;
+  top: -1vh;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 18px;
+  color: #444;
+  display: flex;
+  justify-content: center;
+}
+
+.collapsible:hover,
+.content:hover {
+  background-color: transparent;
+}
+
+.content {
+  display: none;
+
+  padding: 0 18px;
+  overflow: hidden;
+  background-color: #f9f9f9;
+  margin-bottom: 15px;
+}
