--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,28 @@
       rel="stylesheet"
     />
     
+
+
+
+  <style>
+      @keyframes shake {
+          0% { transform: translateX(0); }
+          25% { transform: translateX(-5px); }
+          50% { transform: translateX(5px); }
+          75% { transform: translateX(-5px); }
+          100% { transform: translateX(0); }
+      }
+
+      .shaking-image {
+          width: 5vh;
+          animation: shake 0.5s ease-in-out infinite;
+      }
+    </style>
+
+  </style>
+</head>
+<body>
+  
    
   </head>
   <body>
