--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %} {% block content %}
 <div class="get-started slide-in">
+  <img
+    class="shaking-image"
+    style="width: 5vh"
+    src="https://cdn-icons-png.flaticon.com/128/2268/2268143.png"
+  />
   <h2>Click To Get Started</h2>
-  <i
-    class="bx bxs-up-arrow-alt bx-flip-horizontal bx-tada"
-    style="color: #3874f5; font-size: 10vh"
-  ></i>
 </div>
 <br /><br />
 <div class="advantage slide-in">
